test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/plx1_storage_class_in_type.plx
pub fn main(none) i32 {
    foo: data i32 = 0
    return foo
}
